Replace FlexSpace with Logistics Demo and improve spacing for example questions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FlexSpace - AI Lead Qualification & FAQ Support</title>
+    <title>Logistics Demo - AI Lead Qualification & FAQ Support</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="shortcut icon" href="favicon.svg">
     <link rel="apple-touch-icon" href="favicon.svg">
@@ -247,7 +247,7 @@
       /* Example Questions */
       .example-questions {
         max-width: 48rem;
-        margin: 0 auto 2rem;
+        margin: 3rem auto 2rem;
       }
 
       .example-questions-title {
@@ -323,7 +323,7 @@
         <!-- Live Badge -->
         <div class="badge">
           <div class="pulse-dot"></div>
-          LIVE: FlexSpace AI Assistant
+          LIVE: Logistics AI Assistant
         </div>
 
         <!-- Voice Waves -->
@@ -337,7 +337,7 @@
         <!-- Status Display -->
         <div id="status-area">
           <h2>
-            FlexSpace
+            Logistics Demo
             <br />
             <span class="subtitle">AI Lead Qualification & FAQ Support</span>
           </h2>
@@ -358,7 +358,7 @@
           <h2>
             Connected
             <br />
-            <span class="subtitle">FlexSpace AI Agent</span>
+            <span class="subtitle">Logistics AI Agent</span>
           </h2>
 
           <div class="success-text">✅ Voice call active</div>
@@ -382,8 +382,8 @@
         <div class="example-questions">
           <div class="example-questions-title">Try asking:</div>
           <div class="question-chips">
-            <button class="question-chip" onclick="handleExampleQuestion(this)" data-question="What is FlexSpace?">
-              What is FlexSpace?
+            <button class="question-chip" onclick="handleExampleQuestion(this)" data-question="What services do you offer?">
+              What services do you offer?
             </button>
             <button class="question-chip" onclick="handleExampleQuestion(this)" data-question="How much do you charge per pallet?">
               How much per pallet?
